k8s/ingress-project/ingress-nginx-pv/pv-nginx-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-pv
spec:
  selector:
    matchLabels:
      run: nginx-pv
  replicas: 3
  template:
    metadata:
      labels:
        run: nginx-pv
    spec:
      volumes:
        - name: task-pv-storage
          persistentVolumeClaim:
            claimName: pvc-nfs
      containers:
        - name: task-pv-container
          image: nginx
         
          resources:
            limits:
              memory: 100Mi
              cpu: 100m

            requests:
              memory: 50Mi
              cpu: 50m
             
          ports:
            - containerPort: 80
              name: "http-server"
          volumeMounts:
            - mountPath: "/usr/share/nginx/html"
              name: task-pv-storage
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-pv
  labels:
    run: nginx-pv
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    run: nginx-pv
